experimental/parser/testdata/parser/type/repeated.proto.stderr.txt
error: missing `(...)` around method return type
  --> testdata/parser/type/repeated.proto:33:41
   | 
33 |     rpc X4(required optional M) returns stream optional M {}
   |                                         ^^^^^^^^^^^^^^^^^ help: replace this with `(stream optional M)`

error: missing `(...)` around method return type
  --> testdata/parser/type/repeated.proto:34:46
   | 
34 |     rpc X5(repeated repeated test.M) returns repeated stream .test.M {}
   |                                              ^^^^^^^^^^^^^^^^^^^^^^^ help: replace this with `(repeated stream .test.M)`

error: missing `(...)` around method return type
  --> testdata/parser/type/repeated.proto:35:43
   | 
35 |     rpc X6(stream stream .test.M) returns stream repeated M {}
   |                                           ^^^^^^^^^^^^^^^^^ help: replace this with `(stream repeated M)`

encountered 3 errors
